--- a/index.html
+++ b/index.html
@@ -1,13 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Experiment zone</title>
+    <title>CSS Cheat Sheet</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body>
-    <h1>hello world</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, ducimus, veniam cupiditate tempore earum itaque quasi excepturi minima architecto consequatur velit nam eos saepe qui asperiores et vel cum beatae.</p>
+    <div class="container">
+
+        <div class="box-1">
+            <h1>Hello World</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam ab sint maiores pariatur porro.
+                Quibusdam quaerat sequi voluptatem modi cum. Dignissimos possimus voluptas est non consequatur quaerat.
+                Delectus, expedita ea. Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim explicabo delectus,
+                quasi voluptatum ipsa odit fugit molestiae sit sapiente quas reiciendis dignissimos, laborum illo est.
+                Blanditiis quibusdam eum perferendis nisi? Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Nihil, officia. Tempora numquam voluptate excepturi, culpa suscipit quisquam neque asperiores hic minus
+                soluta, sequi eius perferendis quidem laborum impedit nobis illum?</p>
+        </div>
+
+        <div class="box-2">
+            <h1>Goodbye World</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt consequuntur, quae nisi id, adipisci
+                reprehenderit atque illo expedita sequi nostrum repellat. Ullam vel architecto earum eos eligendi aut
+                esse voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta at reiciendis
+                laudantium molestiae. Itaque voluptatum eius ab iste, fugiat excepturi dolor vero aspernatur sunt
+                quaerat aperiam labore blanditiis placeat adipisci. Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Saepe laborum cupiditate quas excepturi accusantium nam possimus enim officia. Reprehenderit,
+                laboriosam id molestias nulla consequatur consequuntur culpa officiis animi explicabo modi!</p>
+            <a href="" class="button">Read More</a>
+        </div>
+
+        <div class="categories">
+            <h2>Category</h2>
+            <ul>
+                <li><a href="#">Category 1</a></li>
+                <li><a href="#">Category 2</a></li>
+                <li><a href="#">Category 3</a></li>
+                <li><a href="#">Category 4</a></li>
+                <li><a href="#">Category 5</a></li>
+            </ul>
+        </div>
+
+        <form class="my-form">
+            <div class="form-group">
+                <label>Name: </label>
+                <input type="text" name="name" id="name">
+            </div>
+            <div class="form-group">
+                <label>Email: </label>
+                <input type="text" name="email" id="email">
+            </div>
+            <div class="form-group">
+                <label>Message: </label>
+                <textarea type="text" name="message" id="message"></textarea>
+            </div>
+            <input class="button" type="submit" value="Submit" name="">
+        </form>
+
+        <div class="block">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati vel at tempore voluptate eveniet
+                tempora autem sed aspernatur similique voluptatem qui officia fuga in omnis, possimus neque praesentium
+                voluptates! Repudiandae? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+
+        <div class="block">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati vel at tempore voluptate eveniet
+                tempora autem sed aspernatur similique voluptatem qui officia fuga in omnis, possimus neque praesentium
+                voluptates! Repudiandae? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+
+        <div class="block">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati vel at tempore voluptate eveniet
+                tempora autem sed aspernatur similique voluptatem qui officia fuga in omnis, possimus neque praesentium
+                voluptates! Repudiandae? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+
+        <div id="main-block">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati vel at tempore voluptate eveniet
+                tempora autem sed aspernatur similique voluptatem qui officia fuga in omnis, possimus neque praesentium
+                voluptates! Repudiandae? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+
+        <div id="sidebar">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati vel at tempore voluptate eveniet
+                tempora autem sed aspernatur similique voluptatem qui officia fuga in omnis, possimus neque praesentium
+                voluptates! Repudiandae? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+
+        <div class="clr"></div>
+
+        <div class="p-box">
+            <h1>Hello</h1>
+            <h2>Goodbye</h2>
+        </div>
+
+        <div class="my-list-div">
+            <ul class="my-list">
+                <li>List Item</li>
+                <li>List Item</li>
+                <li>List Item</li>
+                <li>List Item</li>
+                <li>List Item</li>
+                <li>List Item</li>
+                <li>List Item</li>
+                <li>List Item</li>
+                <li>List Item</li>
+            </ul>
+        </div>
+    </div> <!-- ./container -->
+
+    <a class="fix-me button" href="">Hello</a>
+
+    <div style="margin-top: 500px;"></div>
 </body>
-</html>
+
+</html
