--- a/index.html
+++ b/index.html
@@ -1,126 +1,119 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<!--
+	Dimension by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Arjun Dilip | human who &hearts; tech</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Cheat Sheet</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
+		<!-- Wrapper -->
+			<div id="wrapper">
 
-<body>
-    <div class="container">
+				<!-- Header -->
+					<header id="header">
+						<div class="logo">
+							<span>&#10054;</span>
+						</div>
+						<div class="content">
+							<div class="inner">
+								<h1>Hello!</h1>
+								<p>I'm Arjun, a QA Engineer with an outrageous interest in software development</p>
+							</div>
+						</div>
+						<!-- <nav>
+							<ul>
+								<li><a href="#intro">Intro</a></li>
+								<li><a href="#work">Work</a></li>
+								<li><a href="#about">About</a></li>
+								<li><a href="#contact">Contact</a></li>
+								<li><a href="#elements">Elements</a></li>
+							</ul>
+						</nav> -->
+					</header>
 
-        <div class="box-1">
-            <h1>Hello World</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam ab sint maiores pariatur porro.
-                Quibusdam quaerat sequi voluptatem modi cum. Dignissimos possimus voluptas est non consequatur quaerat.
-                Delectus, expedita ea. Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim explicabo delectus,
-                quasi voluptatum ipsa odit fugit molestiae sit sapiente quas reiciendis dignissimos, laborum illo est.
-                Blanditiis quibusdam eum perferendis nisi? Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Nihil, officia. Tempora numquam voluptate excepturi, culpa suscipit quisquam neque asperiores hic minus
-                soluta, sequi eius perferendis quidem laborum impedit nobis illum?</p>
-        </div>
+				<!-- Main -->
+					<div id="main">
 
-        <div class="box-2">
-            <h1>Goodbye World</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt consequuntur, quae nisi id, adipisci
-                reprehenderit atque illo expedita sequi nostrum repellat. Ullam vel architecto earum eos eligendi aut
-                esse voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta at reiciendis
-                laudantium molestiae. Itaque voluptatum eius ab iste, fugiat excepturi dolor vero aspernatur sunt
-                quaerat aperiam labore blanditiis placeat adipisci. Lorem ipsum dolor sit amet consectetur adipisicing
-                elit. Saepe laborum cupiditate quas excepturi accusantium nam possimus enim officia. Reprehenderit,
-                laboriosam id molestias nulla consequatur consequuntur culpa officiis animi explicabo modi!</p>
-            <a href="" class="button">Read More</a>
-        </div>
+						<!-- Intro -->
+							<article id="intro">
+								<h2 class="major">Intro</h2>
+								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+							</article>
 
-        <div class="categories">
-            <h2>Category</h2>
-            <ul>
-                <li><a href="#">Category 1</a></li>
-                <li><a href="#">Category 2</a></li>
-                <li><a href="#">Category 3</a></li>
-                <li><a href="#">Category 4</a></li>
-                <li><a href="#">Category 5</a></li>
-            </ul>
-        </div>
+						<!-- Work -->
+							<article id="work">
+								<h2 class="major">Work</h2>
+								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
+								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+							</article>
 
-        <form class="my-form">
-            <div class="form-group">
-                <label>Name: </label>
-                <input type="text" name="name" id="name">
-            </div>
-            <div class="form-group">
-                <label>Email: </label>
-                <input type="text" name="email" id="email">
-            </div>
-            <div class="form-group">
-                <label>Message: </label>
-                <textarea type="text" name="message" id="message"></textarea>
-            </div>
-            <input class="button" type="submit" value="Submit" name="">
-        </form>
+						<!-- About -->
+							<article id="about">
+								<h2 class="major">About</h2>
+								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+							</article>
 
-        <div class="block">
-            <h3>Heading</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati vel at tempore voluptate eveniet
-                tempora autem sed aspernatur similique voluptatem qui officia fuga in omnis, possimus neque praesentium
-                voluptates! Repudiandae? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        </div>
+						<!-- Contact -->
+							<article id="contact">
+								<h2 class="major">Contact</h2>
+								<form method="post" action="#">
+									<div class="fields">
+										<div class="field half">
+											<label for="name">Name</label>
+											<input type="text" name="name" id="name" />
+										</div>
+										<div class="field half">
+											<label for="email">Email</label>
+											<input type="text" name="email" id="email" />
+										</div>
+										<div class="field">
+											<label for="message">Message</label>
+											<textarea name="message" id="message" rows="4"></textarea>
+										</div>
+									</div>
+									<ul class="actions">
+										<li><input type="submit" value="Send Message" class="primary" /></li>
+										<li><input type="reset" value="Reset" /></li>
+									</ul>
+								</form>
+								<ul class="icons">
+									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								</ul>
+							</article>
 
-        <div class="block">
-            <h3>Heading</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati vel at tempore voluptate eveniet
-                tempora autem sed aspernatur similique voluptatem qui officia fuga in omnis, possimus neque praesentium
-                voluptates! Repudiandae? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        </div>
+					</div>
 
-        <div class="block">
-            <h3>Heading</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati vel at tempore voluptate eveniet
-                tempora autem sed aspernatur similique voluptatem qui officia fuga in omnis, possimus neque praesentium
-                voluptates! Repudiandae? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        </div>
+				<!-- Footer -->
+					<footer id="footer">
+						<p class="copyright">Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+					</footer>
 
-        <div id="main-block">
-            <h3>Heading</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati vel at tempore voluptate eveniet
-                tempora autem sed aspernatur similique voluptatem qui officia fuga in omnis, possimus neque praesentium
-                voluptates! Repudiandae? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        </div>
+			</div>
 
-        <div id="sidebar">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati vel at tempore voluptate eveniet
-                tempora autem sed aspernatur similique voluptatem qui officia fuga in omnis, possimus neque praesentium
-                voluptates! Repudiandae? Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        </div>
+		<!-- BG -->
+			<div id="bg"></div>
 
-        <div class="clr"></div>
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
-        <div class="p-box">
-            <h1>Hello</h1>
-            <h2>Goodbye</h2>
-        </div>
-
-        <div class="my-list-div">
-            <ul class="my-list">
-                <li>List Item</li>
-                <li>List Item</li>
-                <li>List Item</li>
-                <li>List Item</li>
-                <li>List Item</li>
-                <li>List Item</li>
-                <li>List Item</li>
-                <li>List Item</li>
-                <li>List Item</li>
-            </ul>
-        </div>
-    </div> <!-- ./container -->
-
-    <a class="fix-me button" href="">Hello</a>
-
-    <div style="margin-top: 500px;"></div>
-</body>
-
-</html
+	</body>
+</html>
