--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
             <!-- Footer -->
             <footer id="footer">
                 <p class="copyright">
-                    Design: <a href="https://html5up.net">HTML5 UP</a>.
+                    Connect with me <br /><br />
+                    <ul class="icons">
+                        <li><a href="https://au.linkedin.com/in/arjun-dilip" rel="noopener noreferrer" target="_blank" class="fab fa-linkedin-in"></a></li>
+                        <li><a href="https://github.com/arjun-dilip" rel="noopener noreferrer" target="_blank" class="fab fa-github-alt"></a></li>
+                    </ul>
                 </p>
             </footer>
         </div>
