change to content and added meta tags for social

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Arjun Dilip | human who &hearts; tech</title>
+        <title>Arjun Dilip | tech enthusiast</title>
         <meta charset="utf-8" />
         <meta
             name="viewport"
@@ -43,6 +43,11 @@
             content="assets/favicons/browserconfig.xml"
         />
         <meta name="theme-color" content="#333333" />
+        <meta property="og:title" content="Arjun Dilip - Frontend Developer + QA Engineer">
+        <meta property="og:description" content="I'm a software engineer based out of Sydney, Australia. I do frontend development, test automation, and manual testing.">
+        <!-- <meta property="og:image" content="https://www.arjundilip.com/*.jpg"> -->
+        <meta property="og:url" content="https://www.arjundilip.com/index.html">
+        <meta name="description" content="I'm a software engineer based out of Sydney, Australia. I do frontend development, test automation, and manual testing." />
     </head>
     <body class="is-preload">
         <!-- Wrapper -->
@@ -57,8 +62,8 @@
                     <div class="inner">
                         <h1>Hello!</h1>
                         <p>
-                            I'm Arjun, a QA Engineer with an outrageous interest
-                            in software development
+                            I'm Arjun, a frontend developer, test automation enthusiast, and seasoned manual tester<br>
+                            I'm currently based in Sydney, Australia
                         </p>
                     </div>
                 </div>
