--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
                     <div class="inner">
                         <h1>Hello!</h1>
                         <p>
-                            I'm Arjun, a frontend developer, test automation enthusiast, and seasoned manual tester<br>
-                            I'm currently based in Sydney, Australia
+                            I'm Arjun, a frontend developer, test automation enthusiast, and seasoned manual tester.
+                            <br>
+                            I'm currently based in Sydney, Australia.
                         </p>
                     </div>
                 </div>
@@ -75,6 +76,7 @@
                     Connect with me <br /><br />
                     <ul class="icons">
                         <li><a href="https://au.linkedin.com/in/arjun-dilip" rel="noopener noreferrer" target="_blank" class="fab fa-linkedin-in"></a></li>
+                        <li><a href="https://twitter.com/arjdilip" rel="noopener noreferrer" target="_blank" class="fab fa-twitter"></a></li>
                         <li><a href="https://github.com/arjun-dilip" rel="noopener noreferrer" target="_blank" class="fab fa-github-alt"></a></li>
                     </ul>
                 </p>
