remove unused css styles other than bg related

--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
             <!-- Header -->
             <header id="header">
                 <div class="logo">
-                    <!-- <span>&#10054;</span> -->
                     <i class="fas fa-user-astronaut"></i>
                 </div>
                 <div class="content">
@@ -73,7 +72,7 @@
             <!-- Footer -->
             <footer id="footer">
                 <p class="copyright">
-                    Connect with me <br /><br />
+                    Connect with me
                     <ul class="icons">
                         <li><a href="https://au.linkedin.com/in/arjun-dilip" rel="noopener noreferrer" target="_blank" class="fab fa-linkedin-in"></a></li>
                         <li><a href="https://twitter.com/arjdilip" rel="noopener noreferrer" target="_blank" class="fab fa-twitter"></a></li>
